# Parcial03_HPC

./: Copia_Parcial3HPC_FrancoValentina.ipynb  Parcial3HPC_FrancoValentina.ipynb  README.md
LinealRegresion/: CMakeLists.txt  main.cpp
LinealRegresion/Dataset/: Concrete.csv
LinealRegresion/Debug/: CMakeCache.txt.prev  build.ninja  cmake_install.cmake  costosN.txt  thetasN.txt
LinealRegresion/Extraccion/: extractiondata.cpp  extractiondata.h
LinealRegresion/Regression/: linearregresion.cpp  linearregresion.h
